--- a/index.html
+++ b/index.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/4ae12d314e.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Project New Year</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="main-header">
+        <div class="header-content">
+            <h3>All Thinks Are <br> Possible If You <br>believe</h3>
+            <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered
+                alteration
+                in some <br> form, by injected humour, or randomised words</p>
+            <button class="btn-primary">Contact Us</button>
+        </div>
+    </header>
+
+    <main>
+        <section class="about">
+            <div class="about-img">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="about-details">
+                <h3>My failures of <br> previous year</h3>
+                <p>Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br>
+                    classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+                <ul>
+                    <li><i class="fa-solid fa-chevron-right"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-chevron-right"></i> Contrary to popular belief.</li>
+                    <li><i class="fa-solid fa-chevron-right"></i> Contrary to popular , is not simply.</li>
+                    <li><i class="fa-solid fa-chevron-right"></i> Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-chevron-right"></i> Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="plans">
+            <h3>My Plans</h3>
+            <div class="my-plans">
+                <div class="box">
+                    <img src="images/icons/web.png" alt="">
+                    <h2>Web Development</h2>
+                    <p>I want to start</p>
+                </div>
+                <div class="box">
+                    <img src="images/icons/js.png" alt="">
+                    <h2>Javascript</h2>
+                    <p>I want to learn</p>
+                </div>
+                <div class="box">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h2>Smoking Habit</h2>
+                    <p>I want to end</p>
+                </div>
+                <div class="box">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h2>Ecommerce</h2>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+
+        </section>
+
+        <div class="img-section">
+            <div class="img-details">
+                <h2>Awlays keep a positive <br> mindset</h2>
+                <button class="btn-img">Call Now</button>
+            </div>
+            
+        </div>
+    </main>
+
+    <footer>
+         <div class="footer-section">
+            <div class="future">
+                <h2>Future</h2>
+                <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <div class="future-icon">
+                    <img src="images/icons/fb.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="form-box">
+                <h2>Subscribe</h2>
+                <input type="email" placeholder="Enter your email">
+                <button class="btn-img">Subcribe</button>
+            </div>
+         </div>
+    </footer>
 </body>
+
 </html>
